implementando um supplier